--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,13 @@ dependencies {
     compile 'com.facebook.android:facebook-login:[4,5)'
     
     testCompile 'junit:junit:4.12'
+
+    /* for Room API
+    compile 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion;
+    annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion;
+    */
+
+    /*
+    compile 'com.google.code.gson:gson:2.4'
+    */
 }
