--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ buildscript {
     }
 }
 
+/* for Room API
+ext {
+    buildToolsVersion = "25.0.2"
+    supportLibVersion = "25.3.1"
+    archRoomVersion = "1.0.0-alpha1"
+}
+*/
+
 allprojects {
     repositories {
         jcenter()
