--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity" >
-        </activity>
-
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.StartingActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activity.StartingActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -50,7 +41,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.OffersActivity" />
-        <activity android:name=".activity.OfferDetail"/>
+        <activity android:name=".activity.OfferDetail" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.AdsViewed"></activity>
     </application>
 
 </manifest>
