--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 //    compile 'com.android.support:appcompat-v7:25.3.1'
-    
+
 
     testCompile 'junit:junit:4.12'
 
-    
     /* for Room API
     compile 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion;
     annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion;
@@ -43,5 +42,5 @@ compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:appcompat-v7:27'
     compile 'com.android.support:cardview-v7:27'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:design:27.+'
+    compile 'com.android.support:design:27.0.2'
 }
