Added the ViewProfile Activity, improved User class by adding updateSession() and updateProfile() methods, tested profile updation (PHP) on clicking "update" button, added isEmailValid(), validateAge() methods for checking the user input and corrected the flow of the application by adding activity.finish() and onBackPressed() method.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,9 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme">
-        </activity>
-        <activity android:name=".activity.AdsViewed"/>
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".activity.AdsViewed" />
+        <activity android:name=".activity.ViewProfile"/>
     </application>
 
 </manifest>
