--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,9 +54,8 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme"/>
-        <activity android:name=".activity.AdsViewed" />
-        <activity android:name=".activity.ViewProfile"/>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activity.ViewProfile" />
 
         <service
             android:name=".notifications.MyFirebaseMessagingService"
@@ -66,13 +65,13 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-
-        <service
-            android:name=".notifications.MyFirebaseInstanceIDService">
+        <service android:name=".notifications.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
+
+        <activity android:name=".activity.SupportedAds"></activity>
     </application>
 
 </manifest>
