Implemented background recording task using Services, just need to handle the case of using it for the first time (when application doesn't have recording permissions)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,11 @@
         <provider android:authorities="com.facebook.app.FacebookContentProvider360259361089404"
             android:name="com.facebook.FacebookContentProvider"
             android:exported="true"/>
+
+        <service
+            android:name=".utils.ChatHeadService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
